--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^10.3.5",
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/luxon": "^3.3.0",
+    "@types/negotiator": "^0.6.1",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "html-react-parser": "^4.0.0",
     "lucide-react": "^0.259.0",
     "luxon": "^3.3.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
